# idionautic-agent

./: Cargo.toml  Makefile  README.md  index.html
.github/workflows/: integration-tests.yml  wasm.yml
docs/: README.md  idionautic_system.dot
src/: lib.rs
tests/: integration.rs
