[package]
name = "idionautic-agent"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly agent for Idionautic Telemetry System"
license = "MIT"
repository = "https://github.com/navicore/idionautic-agent"

[lib]
crate-type = ["cdylib"]  # Required for building WebAssembly

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

log = "0.4"  
console_log = "0.2"
