[package]
name = "idionautic-agent"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly agent for Idionautic Telemetry System"
license = "MIT"
repository = "https://github.com/navicore/idionautic-agent"

[lib]
crate-type = ["cdylib", "rlib"]  # Include "rlib" for regular Rust usage

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"  
console_log = "0.2"
js-sys = "0.3.72"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "Headers", "Response", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

